预测功能实现
