# internal/api/data/recipe.go
@@ -37,7 +37,7 @@ func (api *RecipeApi) List(ctx *gin.Context, req *data.RecipeListRequest) (res *
 		if businessErr, ok := err.(*utils.BusinessError); ok {
 			return nil, businessErr
 		}
-		return nil, utils.NewBusinessError(utils.InternalError)
+		return nil, utils.NewBusinessError(utils.InternalError, "")
 	}
 	return
 }
@@ -62,21 +62,20 @@ func (api *RecipeApi) Add(ctx *gin.Context, req *data.RecipeAddRequest) (res *dt
 			totalPercentage += material.Percentage
 		}
 		if totalPercentage != 100 {
-			return nil, utils.NewBusinessError(utils.MaterialProportionSumNot100Code)
+			return nil, utils.NewBusinessError(utils.MaterialProportionSumNot100Code, "")
 		}
 		totalPercentage = 0
 	}
 	if totalProportion != 100 {
-		return nil, utils.NewBusinessError(utils.MaterialGroupProportionNot100Code)
+		return nil, utils.NewBusinessError(utils.MaterialGroupProportionNot100Code, "")
 	}
-	totalProportion = 0
 	// 调用服务层的 Add 方法进行配方数据插入
 	res, err = api.service.Add(ctx, req)
 	if err != nil {
 		if businessErr, ok := err.(*utils.BusinessError); ok {
 			return nil, businessErr
 		}
-		return nil, utils.NewBusinessError(utils.InternalError)
+		return nil, utils.NewBusinessError(utils.InternalError, "")
 	}
 	return res, err
 }
@@ -99,7 +98,7 @@ func (api *RecipeApi) Info(ctx *gin.Context, req *data.RecipeInfoRequest) (res *
 		if businessErr, ok := err.(*utils.BusinessError); ok {
 			return nil, businessErr
 		}
-		return nil, utils.NewBusinessError(utils.InternalError)
+		return nil, utils.NewBusinessError(utils.InternalError, "")
 	}
 	return
 }
@@ -122,7 +121,67 @@ func (api *RecipeApi) FormList(ctx *gin.Context, req *data.RecipeFormListRequest
 		if businessErr, ok := err.(*utils.BusinessError); ok {
 			return nil, businessErr
 		}
-		return nil, utils.NewBusinessError(utils.InternalError)
+		return nil, utils.NewBusinessError(utils.InternalError, "")
 	}
 	return
+}
+
+// Edit 编辑现有配方信息
+// @Summary 编辑现有配方
+// @Description 根据提供的配方信息更新现有配方记录，更新时确保材料组和材料百分比的比例和为100%
+// @Tags 配方管理
+// @Accept json
+// @Produce json
+// @Param req body data.RecipeEditRequest true "请求参数，包含更新的配方信息"
+// @Success 200 {object} dto.Empty "成功更新配方信息"
+// @Failure 400 {object} dto.ErrorResponse "请求参数错误，如缺少必要字段或格式不正确"
+// @Failure 500 {object} dto.ErrorResponse "服务器内部错误，可能是数据库更新失败等情况"
+// @Router /data/recipe [put]
+func (api *RecipeApi) Edit(ctx *gin.Context, req *data.RecipeEditRequest) (res *dto.Empty, err error) {
+	// 校验材料组和材料百分比的和是否为100%
+	var totalProportion, totalPercentage float64
+	for _, group := range req.MaterialGroups {
+		totalProportion += group.Proportion
+		for _, material := range group.Materials {
+			totalPercentage += material.Percentage
+		}
+		if totalPercentage != 100 {
+			return nil, utils.NewBusinessError(utils.MaterialProportionSumNot100Code, "")
+		}
+		totalPercentage = 0
+	}
+	if totalProportion != 100 {
+		return nil, utils.NewBusinessError(utils.MaterialGroupProportionNot100Code, "")
+	}
+
+	res, err = api.service.Edit(ctx, req)
+	if err != nil {
+		if businessErr, ok := err.(*utils.BusinessError); ok {
+			return nil, businessErr
+		}
+		return nil, utils.NewBusinessError(utils.InternalError, "")
+	}
+	return res, err
+}
+
+// Delete 删除配方信息
+// @Summary 删除配方
+// @Description 根据配方ID删除指定的配方记录
+// @Tags 配方管理
+// @Accept json
+// @Produce json
+// @Param req body data.RecipeDeleteRequest true "请求参数，包含需要删除的配方ID"
+// @Success 200 {object} dto.Empty "成功删除配方信息"
+// @Failure 400 {object} dto.ErrorResponse "请求参数错误，可能是配方ID无效"
+// @Failure 500 {object} dto.ErrorResponse "服务器内部错误，可能是数据库删除失败等情况"
+// @Router /data/recipe [delete]
+func (api *RecipeApi) Delete(ctx *gin.Context, req *data.RecipeDeleteRequest) (res *dto.Empty, err error) {
+	res, err = api.service.Delete(ctx, req)
+	if err != nil {
+		if businessErr, ok := err.(*utils.BusinessError); ok {
+			return nil, businessErr
+		}
+		return nil, utils.NewBusinessError(utils.InternalError, "")
+	}
+	return res, err
 }
