# internal/model/entity/experiment_steps.go
@@ -12,7 +12,7 @@ CREATE TABLE `experiment_steps` (
   `step_order` int NOT NULL COMMENT '步骤顺序',
   `step_name` varchar(255) NOT NULL COMMENT '步骤名称',
   `result_value` varchar(256) DEFAULT NULL COMMENT '步骤结果值',
-  `experiment_condition` varchar(255) DEFAULT NULL COMMENT '步骤实验条件',
+  `experiment_condition` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT '' COMMENT '步骤实验条件',
   `created_at` datetime NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
   `updated_at` datetime NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
   PRIMARY KEY (`id`),
@@ -21,15 +21,15 @@ CREATE TABLE `experiment_steps` (
 ******sql******/
 // ExperimentSteps 实验步骤表
 type ExperimentSteps struct {
-	ID                  string    `gorm:"primaryKey;column:id;type:varchar(36);not null" json:"id"`                               // 实验步骤id
-	ExperimentID        string    `gorm:"index:experiment_id;column:experiment_id;type:varchar(36);not null" json:"experimentId"` // 实验ID
-	RecipeID            string    `gorm:"column:recipe_id;type:varchar(36);not null" json:"recipeId"`                             // 配方id
-	StepOrder           int       `gorm:"column:step_order;type:int;not null" json:"stepOrder"`                                   // 步骤顺序
-	StepName            string    `gorm:"column:step_name;type:varchar(255);not null" json:"stepName"`                            // 步骤名称
-	ResultValue         string    `gorm:"column:result_value;type:varchar(256);default:null" json:"resultValue"`                  // 步骤结果值
-	ExperimentCondition string    `gorm:"column:experiment_condition;type:varchar(255);default:null" json:"experimentCondition"`  // 步骤实验条件
-	CreatedAt           time.Time `gorm:"column:created_at;type:datetime;not null;default:CURRENT_TIMESTAMP" json:"createdAt"`    // 创建时间
-	UpdatedAt           time.Time `gorm:"column:updated_at;type:datetime;not null;default:CURRENT_TIMESTAMP" json:"updatedAt"`    // 修改时间
+	ID                  string    `gorm:"primaryKey;column:id;type:varchar(36);not null" json:"id"`                                         // 实验步骤id
+	ExperimentID        string    `gorm:"index:experiment_id;column:experiment_id;type:varchar(36);not null" json:"experimentId"`           // 实验ID
+	RecipeID            string    `gorm:"column:recipe_id;type:varchar(36);not null" json:"recipeId"`                                       // 配方id
+	StepOrder           int       `gorm:"column:step_order;type:int;not null" json:"stepOrder"`                                             // 步骤顺序
+	StepName            string    `gorm:"column:step_name;type:varchar(255);not null" json:"stepName"`                                      // 步骤名称
+	ResultValue         string    `gorm:"column:result_value;type:varchar(256);default:null" json:"resultValue"`                            // 步骤结果值
+	ExperimentCondition string    `gorm:"column:experiment_condition;type:varchar(255);default:null;default:''" json:"experimentCondition"` // 步骤实验条件
+	CreatedAt           time.Time `gorm:"column:created_at;type:datetime;not null;default:CURRENT_TIMESTAMP" json:"createdAt"`              // 创建时间
+	UpdatedAt           time.Time `gorm:"column:updated_at;type:datetime;not null;default:CURRENT_TIMESTAMP" json:"updatedAt"`              // 修改时间
 }
 
 // TableName get sql table name.获取数据库表名
